[project]
name = "aula-19"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas William da Silva Chaves",email = "lucaswilliamsv@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"

